# robokross_ws

./: README.md  docs.md  mock_bud.py  mock_gkv2_nav.py  mock_motor_receiver.py  setup_virtual_ports.sh  test_navigation_suite.py
install/: local_setup.sh  setup.sh
install/gkv2_motor_bridge/include/gkv2_motor_bridge/gkv2_motor_bridge/msg/: gkv2_config_status.h  gkv2_config_status.hpp  gkv2_status.h  gkv2_status.hpp  navigation_status.h  navigation_status.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/gkv2_motor_bridge/include/gkv2_motor_bridge/gkv2_motor_bridge/msg/detail/: gkv2_config_status__builder.hpp  gkv2_config_status__functions.h  gkv2_config_status__rosidl_typesupport_fastrtps_c.h  gkv2_config_status__rosidl_typesupport_fastrtps_cpp.hpp  gkv2_config_status__rosidl_typesupport_introspection_c.h  gkv2_config_status__rosidl_typesupport_introspection_cpp.hpp  gkv2_config_status__struct.h  gkv2_config_status__struct.hpp  gkv2_config_status__traits.hpp  gkv2_config_status__type_support.h  gkv2_config_status__type_support.hpp  gkv2_status__builder.hpp  gkv2_status__functions.h  gkv2_status__rosidl_typesupport_fastrtps_c.h  gkv2_status__struct.h  gkv2_status__struct.hpp  (+17 more)
install/gkv2_motor_bridge/lib/gkv2_motor_bridge/: cmd_vel_bridge_node  gkv2_config_node  gkv2_driver_node  gkv2_nav_parser_node  navigation_controller_node  navigation_fusion_node  odometer_node
install/gkv2_motor_bridge/share/ament_index/resource_index/package_run_dependencies/: gkv2_motor_bridge
install/gkv2_motor_bridge/share/ament_index/resource_index/parent_prefix_path/: gkv2_motor_bridge
install/gkv2_motor_bridge/share/ament_index/resource_index/rosidl_interfaces/: gkv2_motor_bridge
install/gkv2_motor_bridge/share/ament_index/resource_index/rust_packages/: gkv2_motor_bridge
install/gkv2_motor_bridge/share/gkv2_motor_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gkv2_motor_bridge/share/gkv2_motor_bridge/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_gkv2_motor_bridge__rosidl_generator_cExport.cmake  export_gkv2_motor_bridge__rosidl_generator_pyExport-noconfig.cmake  export_gkv2_motor_bridge__rosidl_generator_pyExport.cmake  export_gkv2_motor_bridge__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_gkv2_motor_bridge__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  gkv2_motor_bridgeConfig-version.cmake  gkv2_motor_bridgeConfig.cmake  gkv2_motor_bridge__rosidl_typesupport_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/gkv2_motor_bridge/share/gkv2_motor_bridge/config/: params.yaml  waypoints.yaml
install/gkv2_motor_bridge/share/gkv2_motor_bridge/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/gkv2_motor_bridge/share/gkv2_motor_bridge/launch/: main.launch.py
install/gkv2_motor_bridge/share/gkv2_motor_bridge/msg/: GKV2ConfigStatus.idl  GKV2ConfigStatus.json  GKV2ConfigStatus.msg  GKV2Status.idl  GKV2Status.json  GKV2Status.msg  NavigationStatus.idl  NavigationStatus.json  NavigationStatus.msg
install/gkv2_motor_bridge/share/gkv2_motor_bridge/rust/: Cargo.toml  build.rs
install/gkv2_motor_bridge/share/gkv2_motor_bridge/rust/src/: lib.rs  msg.rs
install/robokross_control/share/robokross_control/: local_setup.dsv  package.bash  package.dsv  package.sh
install/robokross_control/share/robokross_control/launch/: main.launch.py
install/robokross_navigation/lib/robokross_navigation/: mock_nav_udp_publisher.py
install/robokross_navigation/share/robokross_navigation/: local_setup.dsv  package.dsv  package.ps1  package.sh
install/robokross_navigation/share/robokross_navigation/launch/: nav_test.launch.py
log/: latest_build
src/gkv2_motor_bridge/: CMakeLists.txt  package.xml
src/gkv2_motor_bridge/config/: params.yaml  waypoints.yaml
src/gkv2_motor_bridge/launch/: main.launch.py
src/gkv2_motor_bridge/msg/: GKV2Status.msg  NavigationStatus.msg
src/gkv2_motor_bridge/src/: cmd_vel_bridge_node.cpp  gkv2_config_node.cpp  gkv2_driver_node.cpp  gkv2_nav_parser_node.cpp  navigation_controller_node.cpp  navigation_fusion_node.cpp  odometer_node.cpp
src/install/: local_setup.sh  setup.sh
src/install/robokross_navigation/share/robokross_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/log/: latest_build
src/robokross_control/: CMakeLists.txt
src/robokross_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/robokross_control/install/robokross_control/share/ament_index/resource_index/parent_prefix_path/: robokross_control
src/robokross_control/install/robokross_control/share/robokross_control/: local_setup.sh  package.ps1  package.sh  package.zsh
src/robokross_control/install/robokross_control/share/robokross_control/cmake/: robokross_controlConfig.cmake
src/robokross_control/log/: latest_build
src/robokross_control/src/: stm32_bridge_node.cpp  vehicle_mode_manager_node.cpp
src/robokross_navigation/: CMakeLists.txt
src/robokross_navigation/include/robokross_navigation/: EthDatagramm.h
src/robokross_navigation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/robokross_navigation/install/robokross_navigation/lib/robokross_navigation/: nav_parser_udp_node
src/robokross_navigation/install/robokross_navigation/share/robokross_navigation/: package.sh
src/robokross_navigation/log/: latest_build
src/robokross_navigation/scripts/: mock_nav_publisher.py
src/robokross_navigation/src/: nav_logger_node.cpp  nav_parser_udp_node.cpp
(+1 files in other folders)
